--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -36,3 +36,28 @@
 
 // $font-family-base: $font-family-sans-serif !default;
 // $font-size-base: 1rem !default;
+
+$mytheme-background1: linear-gradient(90deg, #ff5f6d 0%, #ffc371 100%);
+$mytheme-background2: #fff;
+$mytheme-background3: #f5f5f5;
+$mytheme-background4: linear-gradient(90deg, #02aab0 0%, #00cdac 100%);
+$mytheme-background5: #191919;
+
+$mytheme-color1: #ff5f6d;
+$mytheme-color2: #191919;
+$mytheme-color3: #9b9b9b;
+$mytheme-color4: linear-gradient(90deg, #ff5f6d 0%, #ffc371 100%);
+
+/* HSL */
+// $specific-theme-color1: hsla(355%, 78%, 56%, 1);
+// $specific-theme-color2: hsla(248%, 31%, 23%, 1);
+// $specific-theme-color3: hsla(105%, 55%, 96%, 1);
+// $specific-theme-color4: hsla(182%, 43%, 76%, 1);
+// $specific-theme-color5: hsla(203%, 39%, 44%, 1);
+
+// /* RGB */
+// $specific-theme-color1: rgba(230, 57, 70, 1);
+// $specific-theme-color2: rgba(46, 41, 78, 1);
+// $specific-theme-color3: rgba(241, 250, 238, 1);
+// $specific-theme-color4: rgba(168, 218, 220, 1);
+// $specific-theme-color5: rgba(69, 123, 157, 1);
