--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,7 @@
 @import './_variables';
 @import '~bootstrap/scss/bootstrap';
 @import './global';
+@import './form.scss';
 
 @import '../js/components/Layout/Layout';
 @import '../js/components/Navigation/Navigation';
