--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12442,7 +12442,8 @@ a.text-dark:focus {
   color: #212529 !important;
 }
 
-.text-muted {
+.text-muted,
+.input-material-wrapper .form-group label {
   color: #6c757d !important;
 }
 
@@ -12659,43 +12660,44 @@ body {
   color: #ff5f6d;
 }
 
-.input-label-material {
-  position: relative;
+.input-material-wrapper {
+  min-height: 75px;
+  margin-bottom: 0.5rem;
 }
 
-.input-label-material .form-control {
+.input-material-wrapper .form-group {
+  position: relative;
+  margin-bottom: 0px;
+}
+
+.input-material-wrapper .form-group .form-control {
   background: transparent;
   transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 1.5rem 0.75rem;
 }
 
-.input-label-material .form-control:focus {
+.input-material-wrapper .form-group .form-control:focus {
   box-shadow: none;
   border-color: #ff5f6d;
 }
 
-.input-label-material .form-control:focus ~ label {
-  -webkit-transform: translateY(-150%) scale(0.75);
-          transform: translateY(-150%) scale(0.75);
-  color: #ff5f6d !important;
-  background: #fff;
-}
-
-.input-label-material label {
+.input-material-wrapper .form-group label {
   position: absolute;
-  top: 50%;
-  left: 0px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 14px;
+  left: 5px;
   transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 0px 10px;
   pointer-events: none;
 }
 
-.label-material {
+.input-material-wrapper .form-group .input-focused,
+.input-material-wrapper .form-group .input-filled {
+  -webkit-transform: scale(0.75);
+          transform: scale(0.75);
+  top: -14px;
+  left: 0;
+  color: #ff5f6d !important;
   background: #fff;
-  -webkit-transform: translateY(-150%) scale(0.75) !important;
-          transform: translateY(-150%) scale(0.75) !important;
 }
 
 #main-container {
@@ -12788,10 +12790,6 @@ body {
   100% {
     top: 0px;
   }
-}
-
-#contactComponent label {
-  color: red;
 }
 
 
