--- a/resources/assets/sass/form.scss
+++ b/resources/assets/sass/form.scss
@@ -1,32 +1,34 @@
-.input-label-material {
-	position: relative;
-	.form-control {
-		background: transparent;
-		transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-		&:focus {
-			box-shadow: none;
-			border-color: $mytheme-color1;
-			// border-width: 2px;
+.input-material-wrapper {
+	min-height: 75px;
+	margin-bottom: 0.5rem;
+	.form-group {
+		position: relative;
+		margin-bottom: 0px;
+		.form-control {
+			background: transparent;
+			transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+			padding: 1.5rem 0.75rem;
+			&:focus {
+				box-shadow: none;
+				border-color: $mytheme-color1;
+			}
 		}
-
-		&:focus ~ label {
-			transform: translateY(-150%) scale(0.75);
+		label {
+			@extend .text-muted;
+			position: absolute;
+			top: 14px;
+			left: 5px;
+			transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+			padding: 0px 10px;
+			pointer-events: none;
+		}
+		.input-focused,
+		.input-filled {
+			transform: scale(0.75);
+			top: -14px;
+			left: 0;
 			color: $mytheme-color1 !important;
 			background: #fff;
 		}
-		padding: 1.5rem 0.75rem;
 	}
-	label {
-		position: absolute;
-		top: 50%;
-		left: 0px;
-		transform: translateY(-50%);
-		transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-		padding: 0px 10px;
-		pointer-events: none;
-	}
-}
-.label-material {
-	background: #fff;
-	transform: translateY(-150%) scale(0.75) !important;
 }
