--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 
 @import '../js/components/Layout/Layout';
 @import '../js/components/Navigation/Navigation';
+@import '../js/components/Footer/Footer';
 
 @import '../js/components/Pages//Home/Home';
 @import '../js/components/Pages/About/About';
