--- a/resources/assets/js/components/Navigation/Navigation.scss
+++ b/resources/assets/js/components/Navigation/Navigation.scss
@@ -1,5 +1,10 @@
 .main-nav {
 	font-size: 1.2rem;
+	height: 75px;
+	transition: all 0.2s ease-in-out;
+	.navbar-brand {
+		color: #fff;
+	}
 
 	.nav-item {
 		position: relative;
@@ -7,23 +12,48 @@
 		&:hover {
 			.nav-link:before {
 				opacity: 1;
-				transition: opacity 0.3s, transform 0.3s;
-				transform: translateY(0px);
+				transition: all 0.3s;
+				width: 100%;
 			}
 		}
 
 		.nav-link {
+			color: #fff;
 			&::before {
 				position: absolute;
 				top: 100%;
-				left: 0;
+				left: 50%;
+				transform: translateX(-50%);
 				width: 100%;
 				height: 4px;
-				background: rgba(0, 0, 0, 0.1);
+				background: #fff;
 				content: '';
 				opacity: 0;
-				transform: translateY(10px);
+				width: 10%;
 			}
 		}
+	}
+}
+.main-nav-scrolled {
+	top: -75px;
+	.navbar-brand {
+		color: $mytheme-text-secondary !important;
+		&:hover {
+			color: $mytheme-text-main !important;
+		}
+	}
+	.nav-link {
+		color: $mytheme-text-secondary !important;
+		&::before {
+			background: $mytheme-text-main !important;
+		}
+	}
+	animation: nav-slide 0.2s ease-in-out 0.4s forwards;
+}
+
+@keyframes nav-slide {
+	100% {
+		top: 0px;
+		background: $mytheme-bg-secondary;
 	}
 }
