--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3043,8 +3043,6 @@
   clip: auto;
 }
 
-/* HSL */
-
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -10620,7 +10618,9 @@ button.bg-dark:focus {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 
-.shadow {
+.shadow,
+.main-nav-scrolled,
+.impact .impact-inner {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
@@ -12573,6 +12573,10 @@ a.text-dark:focus {
   font-family: "Roboto";
 }
 
+body {
+  color: #25313d;
+}
+
 .fade-appear,
 .fade-enter {
   opacity: 0;
@@ -12611,7 +12615,7 @@ a.text-dark:focus {
 .mybtn1:hover,
 .mybtn2:hover {
   text-decoration: none;
-  color: #ff5f6d;
+  color: #37ca8a;
 }
 
 .mybtn1:hover::after,
@@ -12622,7 +12626,7 @@ a.text-dark:focus {
 
 .mybtn1:active,
 .mybtn2:active {
-  color: #ff5f6d;
+  color: #37ca8a;
 }
 
 .mybtn1:active::after,
@@ -12640,7 +12644,6 @@ a.text-dark:focus {
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
   background: #fff;
-  transition: all 0.3s;
   top: 50%;
   left: 50%;
   position: absolute;
@@ -12648,12 +12651,12 @@ a.text-dark:focus {
 }
 
 .mybtn2 {
-  color: #ff5f6d;
-  border: 2px solid #ff5f6d;
+  color: #37ca8a;
+  border: 2px solid #37ca8a;
 }
 
 .mybtn2::after {
-  background: #ff5f6d;
+  background: #37ca8a;
 }
 
 .mybtn2:hover {
@@ -12662,6 +12665,49 @@ a.text-dark:focus {
 
 .page-padding {
   padding-top: 88px;
+}
+
+.my-transition-elastic,
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link,
+.page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-image img,
+.main-footer a:hover,
+.mybtn1::after,
+.mybtn2::after {
+  transition: all 0.6s cubic-bezier(0.39, 1.66, 0.12, 0.9);
+}
+
+.impact {
+  background: #37ca8a;
+  position: relative;
+}
+
+.impact::before,
+.impact::after {
+  background: #fff;
+  position: absolute;
+  content: "";
+  height: 45px;
+  width: 100%;
+  z-index: 2;
+  left: 0px;
+}
+
+.impact::before {
+  top: 0px;
+}
+
+.impact::after {
+  bottom: 0px;
+}
+
+.impact .impact-inner {
+  background: #25313d;
+  color: #fff;
+  width: 60%;
+  margin: 0 auto;
+  position: relative;
+  z-index: 3;
+  padding: 55px 30px;
 }
 
 .input-material-wrapper {
@@ -12683,7 +12729,7 @@ a.text-dark:focus {
 
 .input-material-wrapper .form-group .form-control:focus {
   box-shadow: none;
-  border-color: #ff5f6d;
+  border-color: #37ca8a;
 }
 
 .input-material-wrapper .form-group label {
@@ -12701,14 +12747,13 @@ a.text-dark:focus {
           transform: scale(0.75);
   top: -14px;
   left: 0;
-  color: #ff5f6d !important;
+  color: #37ca8a !important;
   background: #fff;
 }
 
 .main-nav {
   font-size: 1.2rem;
   height: 75px;
-  transition: all 0.2s ease-in-out;
 }
 
 .main-nav .navbar-brand {
@@ -12744,45 +12789,44 @@ a.text-dark:focus {
 }
 
 .main-nav-scrolled {
-  top: -75px;
+  opacity: 0;
   -webkit-animation: nav-slide 0.2s ease-in-out 0.4s forwards;
           animation: nav-slide 0.2s ease-in-out 0.4s forwards;
 }
 
 .main-nav-scrolled .navbar-brand {
-  color: #434345 !important;
+  color: #25313d !important;
 }
 
 .main-nav-scrolled .navbar-brand:hover {
-  color: #ff5f6d !important;
+  color: #37ca8a !important;
 }
 
 .main-nav-scrolled .nav-link {
-  color: #434345 !important;
+  color: #25313d !important;
 }
 
 .main-nav-scrolled .nav-link::before {
-  background: #ff5f6d !important;
+  background: #37ca8a !important;
 }
 
 @-webkit-keyframes nav-slide {
   100% {
-    top: 0px;
-    background: #f5f5f5;
+    opacity: 1;
+    background: #fff;
   }
 }
 
 @keyframes nav-slide {
   100% {
-    top: 0px;
-    background: #f5f5f5;
+    opacity: 1;
+    background: #fff;
   }
 }
 
 .main-footer {
-  background: #434345;
+  background: #25313d;
   color: #fff;
-  border-top: 1px solid #ced4da;
 }
 
 .main-footer .text-left {
@@ -12794,7 +12838,7 @@ a.text-dark:focus {
 }
 
 .main-footer a:hover {
-  color: #ff5f6d;
+  color: #37ca8a;
 }
 
 .main-footer .main-footer-icons {
@@ -12811,7 +12855,7 @@ a.text-dark:focus {
 }
 
 .main-footer .main-footer-icons li a:hover {
-  color: #ff5f6d;
+  color: #37ca8a;
 }
 
 .page-home .page-home-banner {
@@ -12854,13 +12898,14 @@ a.text-dark:focus {
 
 .page-home .page-home-rules {
   position: relative;
+  background: #fff;
 }
 
 .page-home .page-home-rules .page-home-rules-map {
   position: absolute;
   height: 100%;
   width: 2px;
-  background: #ff5f6d;
+  background: #37ca8a;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -12868,11 +12913,9 @@ a.text-dark:focus {
 
 .page-home .page-home-rules .page-home-rules-pulse {
   position: absolute;
-  right: -18px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background: #ff5f6d;
+  width: 36px;
+  height: 36px;
+  background: #37ca8a;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -12886,9 +12929,9 @@ a.text-dark:focus {
 .page-home .page-home-rules .page-home-rules-pulse::before,
 .page-home .page-home-rules .page-home-rules-pulse::after {
   content: "";
-  border: 1px solid #ff5f6d;
-  width: 35px;
-  height: 35px;
+  border: 1px solid #37ca8a;
+  width: 36px;
+  height: 36px;
   -webkit-animation: pulse 1.5s infinite 1.5s;
           animation: pulse 1.5s infinite 1.5s;
   position: absolute;
@@ -12903,16 +12946,42 @@ a.text-dark:focus {
 .page-home .page-home-rules .page-home-rules-pulse i {
   position: relative;
   z-index: 1;
+  font-size: 20px;
+}
+
+.page-home .page-home-rules .page-home-rules-pulse-left {
+  left: -18px;
+}
+
+.page-home .page-home-rules .page-home-rules-pulse-right {
+  right: -18px;
 }
 
 .page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-text {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-text p {
   padding: 40px;
+}
+
+.page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-image {
+  text-align: center;
+  -webkit-perspective: 30px;
+          perspective: 30px;
+}
+
+.page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-image img {
+  width: 450px;
+  margin: 20px 5px;
+}
+
+.page-home .page-home-rules .page-home-rules-item-container .page-home-rules-item-image img:hover {
+  -webkit-transform: translateZ(2px);
+          transform: translateZ(2px);
 }
 
 @-webkit-keyframes rules-button-animation {
@@ -12967,6 +13036,143 @@ a.text-dark:focus {
             transform: scale(2);
     opacity: 0;
   }
+}
+
+.page-about .page-padding {
+  padding-top: 150px;
+}
+
+.page-about .page-about-heading {
+  text-align: center;
+  margin: 0px 0px 35px;
+  color: #37ca8a;
+}
+
+.page-about .page-about-description {
+  max-width: 1200px;
+  margin: 0px auto;
+}
+
+.page-about .page-about-tech {
+  margin-top: 100px;
+}
+
+.page-about .page-about-tech .page-about-tech-heading {
+  text-align: center;
+  margin: 30px 0px 50px;
+  color: #37ca8a;
+}
+
+.page-about .page-about-tech .page-about-tech-row {
+  margin-bottom: 70px;
+  -webkit-perspective: 30px;
+          perspective: 30px;
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-row-heading {
+  text-align: center;
+  margin-bottom: 65px;
+  padding: 8px;
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link {
+  display: block;
+  position: relative;
+  color: #25313d;
+  text-decoration: none;
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link:hover {
+  -webkit-transform: translate3d(0px, 0px, 2px);
+          transform: translate3d(0px, 0px, 2px);
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link .page-about-tech-card {
+  padding: 25px;
+  position: relative;
+  height: 215px;
+  box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.15);
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link .page-about-tech-card .page-about-tech-card-heading {
+  color: #37ca8a;
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link .page-about-tech-card .page-about-tech-card-description {
+  font-size: 0.94rem;
+  margin-bottom: 0px;
+}
+
+.page-about .page-about-tech .page-about-tech-row .page-about-tech-card-wrapper-link .page-about-tech-card .page-about-tech-card-image {
+  width: 150px;
+  position: absolute;
+  top: -51px;
+  right: 0px;
+}
+
+.page-contact .page-contact-heading {
+  color: #fff;
+}
+
+.page-contact .page-contact-description {
+  color: #fff;
+}
+
+.page-contact .page-contact-description a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+.page-contact .page-contact-wrapper {
+  position: relative;
+  height: 92vh;
+}
+
+.page-contact .page-contact-wrapper .container {
+  margin-top: 100px;
+}
+
+.page-contact .page-contact-wrapper:before {
+  width: 60%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  background: #37ca8a;
+}
+
+.page-contact .page-contact-wrapper:after {
+  width: 40%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  background: #fff;
+}
+
+.page-contact .page-contact-wrapper .page-contact-icons ul {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  list-style-type: none;
+  padding: 0px;
+}
+
+.page-contact .page-contact-wrapper .page-contact-icons ul li {
+  margin: 0px 10px 0px 0px;
+}
+
+.page-contact .page-contact-wrapper .page-contact-icons ul li a {
+  padding: 5px 50px;
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+
+.page-contact #page-contact-form {
+  position: relative;
+  z-index: 5;
 }
 
 
