--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -24,50 +24,8 @@
 // $enable-grid-classes: true !default;
 // $enable-print-styles: true !default;
 
-// Settings for the `<body>` element.
-
-// $body-bg: $white !default;
-// $body-color: $gray-900 !default;
-
-// Font, line-height, and color for body text, headings, and more.
-
-// $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
-// 	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-
-// $font-family-base: $font-family-sans-serif !default;
-// $font-size-base: 1rem !default;
-
-// colors
-// #ff5f6d;
-// #2D3156;
-// #fff;
-// #f5f5f5;
-
-$mytheme-bg-main: #c24847;
-$mytheme-bg-secondary: #f5f5f5;
-
-$mytheme-bg-main-gradient: linear-gradient(to right top, #c24847, #a73a5d, #813768, #553665, #2d3156);
-// $mytheme-background4: linear-gradient(90deg, #02aab0 0%, #00cdac 100%);
-// $mytheme-background5: #191919;
-
-$mytheme-text-main: #ff5f6d;
-$mytheme-text-secondary: #434345;
-// $mytheme-text-main-dark: darken($mytheme-text-main, 15%);
-// $mytheme-text-secondary: #2d3156;
-
-// $mytheme-color2: #191919;
-// $mytheme-color3: #9b9b9b;
-
-/* HSL */
-// $specific-theme-color1: hsla(355%, 78%, 56%, 1);
-// $specific-theme-color2: hsla(248%, 31%, 23%, 1);
-// $specific-theme-color3: hsla(105%, 55%, 96%, 1);
-// $specific-theme-color4: hsla(182%, 43%, 76%, 1);
-// $specific-theme-color5: hsla(203%, 39%, 44%, 1);
-
-// /* RGB */
-// $specific-theme-color1: rgba(230, 57, 70, 1);
-// $specific-theme-color2: rgba(46, 41, 78, 1);
-// $specific-theme-color3: rgba(241, 250, 238, 1);
-// $specific-theme-color4: rgba(168, 218, 220, 1);
-// $specific-theme-color5: rgba(69, 123, 157, 1);
+$mytheme-color-first: #37ca8a; // used for main text
+$mytheme-color-second: #25313d; // used for text
+$mytheme-color-third: #3a3c3e; // used for background
+$mytheme-color-fourth: #f5f5f5; // used for background
+$mytheme-color-fifth: #9b9b9b; // used for help text
