--- a/resources/assets/sass/form.scss
+++ b/resources/assets/sass/form.scss
@@ -11,7 +11,7 @@
 			border-width: 2px;
 			&:focus {
 				box-shadow: none;
-				border-color: $mytheme-text-main;
+				border-color: $mytheme-color-first;
 			}
 		}
 		label {
@@ -28,7 +28,7 @@
 			transform: scale(0.75);
 			top: -14px;
 			left: 0;
-			color: $mytheme-text-main !important;
+			color: $mytheme-color-first !important;
 			background: #fff;
 		}
 	}
