Game dashboard design

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,4 +15,11 @@
 @import '../js/components/Pages//Home/Home';
 @import '../js/components/Pages/About/About';
 @import '../js/components/Pages/Contact/Contact';
+
 @import '../js/components/Pages/Game/Game';
+@import '../js/components/Pages/Game/GameCanvas/GameCanvas';
+@import '../js/components/Pages/Game/GameChat/GameChat';
+@import '../js/components/Pages/Game/GameScore/GameScore';
+@import '../js/components/Pages/Game/GameToolBar/GameToolBar';
+
+@import '../js/components/Pages/Game/GameCanvas/GameTools/GameTools';
