--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -29,3 +29,4 @@ $mytheme-color-second: #25313d; // used for text
 $mytheme-color-third: #3a3c3e; // used for background
 $mytheme-color-fourth: #f5f5f5; // used for background
 $mytheme-color-fifth: #9b9b9b; // used for help text
+$mytheme-color-sixth: #e6e6e6;
