--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,3 +23,5 @@
 @import '../js/components/Pages/Game/GameToolBar/GameToolBar';
 
 @import '../js/components/Pages/Game/GameCanvas/GameTools/GameTools';
+
+@import '../js/components/Pages/Game/GameStart/GameStart';
