--- a/resources/assets/js/components/Pages/Contact/Contact.scss
+++ b/resources/assets/js/components/Pages/Contact/Contact.scss
@@ -6,7 +6,6 @@
 		color: #fff;
 
 		a {
-			// font-size:
 			color: #fff;
 			text-decoration: underline;
 		}
@@ -14,8 +13,10 @@
 
 	.page-contact-wrapper {
 		position: relative;
-		height: calc(100vh - 78px);
+		min-height: 100vh;
 		overflow: hidden;
+		padding-top: 70px;
+		padding-bottom: 70px;
 
 		.container {
 			margin-top: 100px;
