--- a/resources/assets/js/components/Pages/Game/GameScore/GameScore.scss
+++ b/resources/assets/js/components/Pages/Game/GameScore/GameScore.scss
@@ -1,14 +1,29 @@
 .game-board-container-left {
 	padding-top: 15px;
 	padding-bottom: 15px;
+	height: 100%;
+	max-height: 730px;
 
 	.game-board-score {
 		background: #fff;
 		color: $mytheme-color-second;
+		height: inherit;
+		overflow: hidden;
+
+		.game-board-score-header {
+			background: $mytheme-color-fourth;
+			padding: 10px 10px;
+			font-size: 18px;
+			i {
+				margin-right: 15px;
+				font-size: 25px;
+			}
+		}
+
 		.game-board-score-list {
 			list-style-type: none;
 			margin: 0 auto;
-			padding: 15px 0px;
+			padding: 5px 0px;
 
 			.game-board-score-row {
 				padding: 10px 15px;
@@ -23,7 +38,7 @@
 					display: flex;
 					justify-content: center;
 					align-items: center;
-					width: 25%;
+					width: 30%;
 					.game-board-score-drawing {
 						width: 35px;
 						height: 35px;
@@ -40,8 +55,8 @@
 						}
 					}
 					.game-board-score-avatar {
-						width: 50px;
-						height: 50px;
+						width: 40px;
+						height: 40px;
 						position: relative;
 						display: inline-block;
 						border: 2px solid $mytheme-color-third;
@@ -59,11 +74,12 @@
 				}
 
 				.game-board-score-username {
-					width: 50%;
+					width: 70%;
 					padding: 0px 10px;
 				}
 				.game-board-score-points {
-					width: 25%;
+					display: block;
+					width: 100%;
 				}
 			}
 		}
